--- a/index.html
+++ b/index.html
@@ -494,17 +494,16 @@
     </footer>
 
             <!-- Модальне вікно -->
-     <div class="backdrop is-hidden" data-modal>       
+     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p></p>      
-          <button data-modal-close class="modal-btn" type="button" >
-         <svg class="modal-icon" width="11", height="11" id="icon-close" viewBox="0 0 32 32">
-<path d="M32 3.223l-3.223-3.223-12.777 12.777-12.777-12.777-3.223 3.223 12.777 12.777-12.777 12.777 3.223 3.223 12.777-12.777 12.777 12.777 3.223-3.223-12.777-12.777 12.777-12.777z">
-          <use href="./images/icons.svg#icon-close"></use> 
-        </svg>
-       </button>
-      </div>       
+        <button class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/icons.svg#modal-close"></use>
+          </svg>
+        </button>
+      </div>
     </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
