--- a/portfolio.html
+++ b/portfolio.html
@@ -38,16 +38,16 @@
         <li class="contacts">
           <a class="link-mail" class="mail" href="mailto:info@devstudio.com"
             ><svg class="mail-icon" width="16" height="12">
-              <use href="./images/icons.svg#icon-envelope">                
+              <use href="./Images/icons.svg#icon-envelope">                
               </use>
             </svg>info@devstudio.com</a>         
         </li>
          <li class="contacts">
           <a class="link-tel" href="tel:+380961111111"
             ><svg class="tel-icon" width="10" height="16">
-              <use href="./images/icons.svg#icon-smartphone">                
+              <use href="./Images/icons.svg#icon-smartphone">                
               </use>
-            </svg>096 111 11 11</a>
+            </svg>+38 096 111 11 11</a>
         </li>
       </ul>
     </div>      
@@ -72,7 +72,7 @@
                 <li class="flex-element">
                   <a class="flex-link" href="">
                   <div class="project-thumb">
-                    <img class="flex-item" src="./images/techno.jpg" alt="Технокряк" width="370"></img>
+                    <img class="flex-item" src="./Images/imagesbody/images portfolio/img web.jpg" alt="Технокряк" width="370"></img>
                   <div class="overlay-desc">
                     <p class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                   </div>
@@ -87,7 +87,7 @@
                 <li class="flex-element">
                   <a class="flex-link" href="">
                  <div class="project-thumb">
-                  <img class="flex-item" src="./images/poster.jpg" alt="Постер" width="370"></img>
+                  <img class="flex-item" src="./Images/imagesbody/images portfolio/img design.jpg" alt="Постер" width="370"></img>
                   <div class="overlay-desc">
                     <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -104,7 +104,7 @@
                 <li class="flex-element">
                   <a class="flex-link" href="">
                  <div class="project-thumb">
-                  <img class="flex-item" src="./images/restaurant.jpg" alt="Ресторан Seafood" width="370"></img>
+                  <img class="flex-item" src="./Images/imagesbody/images portfolio/img addition.jpg" alt="Ресторан Seafood" width="370"></img>
                 <div class="overlay-desc">
                   <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -120,7 +120,7 @@
 
                 <li class="flex-element">
                   <a class="flex-link" href="">
-                <div class="project-thumb"><img class="flex-item" src="./images/prime.jpg" alt="Проєкт Prime" width="370"></img>
+                <div class="project-thumb"><img class="flex-item" src="./Images/imagesbody/images portfolio/img progect prime.jpg" alt="Проєкт Prime" width="370"></img>
                 <div class="overlay-desc">
                  <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -136,7 +136,7 @@
 
                 <li class="flex-element">
                   <a class="flex-link" href="">
-                 <div class="project-thumb"><img class="flex-item" src="./images/boxes.jpg" alt="Проєкт Boxes" width="370"></img>
+                 <div class="project-thumb"><img class="flex-item" src="./Images/imagesbody/images portfolio/img progect boxes.jpg" alt="Проєкт Boxes" width="370"></img>
                 <div class="overlay-desc">
                  <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -152,7 +152,7 @@
 
                 <li class="flex-element">
                   <a class="flex-link" href="">
-                 <div class="project-thumb"><img class="flex-item" src="./images/monitor.jpg" alt="монітор" width="370"></img>
+                 <div class="project-thumb"><img class="flex-item" src="./Images/imagesbody/images portfolio/img web2.jpg" alt="монітор" width="370"></img>
                 <div class="overlay-desc">
                  <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -170,7 +170,7 @@
                 <li class="flex-element">
                   <a class="flex-link" href="">
                   <div class="project-thumb">
-                    <img class="flex-item" src="./images/magazine.jpg" alt="журнал" width="370"></img>
+                    <img class="flex-item" src="./Images/imagesbody/images portfolio/img design edition.jpg" alt="журнал" width="370"></img>
                   <div class="overlay-desc">
                    <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -187,7 +187,7 @@
 
                 <li class="flex-element">
                   <a class="flex-link" href="">
-                 <div class="project-thumb"><img class="flex-item" src="./images/lab.jpg" alt="Етикетка" width="370"></img>
+                 <div class="project-thumb"><img class="flex-item" src="./Images/imagesbody/images portfolio/img progect lab.jpg" alt="Етикетка" width="370"></img>
                 <div class="overlay-desc">
                  <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -204,7 +204,7 @@
 
                 <li class="flex-element">
                   <a class="flex-link" href="">
-                <div class="project-thumb"><img class="flex-item" src="./images/laptop.jpg" alt="лептоп" width="370"></img>
+                <div class="project-thumb"><img class="flex-item" src="./Images/imagesbody/images portfolio/img growing business.jpg" alt="лептоп" width="370"></img>
                 <div class="overlay-desc">
                  <p class="text">
                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу. 
@@ -227,33 +227,30 @@
 <!--Підвал-->
     <footer class="section-footer">
       <div class="container flex-container-f">
-        <div class="footer-contacts">
-        <a class="footer-link" href="">
-          <span class="logo">Web</span><span class="tail">Studio</span></a>
-      <address>
-        <p class="paragraph">м. Київ, пр-т Лесі Українки, 26</p>       
-          <ul class="footer-list">
-          <li class="footer-item">
-            <a
-              class="link-footer"
-              href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="link-footer" href="tel:+380961111111"
-              >+38 096 111 11 11</a>  
-          </li>
-        </ul>
-      </address>
-     </div> 
+            <div class="footer-contacts">
+                <a class="footer-link" href="">
+                    <span class="logo">Web</span><span class="tail">Studio</span></a>
+                <address>
+                    <ul class="footer-list">
+                        <li class="link-footer-address"><a class="link-footer-address"
+                                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м.Київ,
+                                пр-т Лесі Українки, 26</a></li>
+                        <li class="link-footer-item">
+                            <a class="link-footer-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="link-footer-item">
+                            <a class="link-footer-item" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
      <div class="social">
       <h3 class="social-title">Приєднуйтесь</h3>
       <ul class="social-list">
         <li class="social-item">
           <a class="social-link-f" href="" width="44", height="44">
             <svg class="footer-icon" width="20", height="20">
-              <use href="./images/icons.svg#icon-instagram">                
+              <use href="./Images/icons.svg#icon-instagram">                
               </use> 
             </svg>
           </a>
@@ -261,7 +258,7 @@
         <li class="social-item">
         <a class="social-link-f" href="" width="44", height="44">
             <svg class="footer-icon" width="20", height="20">
-              <use href="./images/icons.svg#icon-twitter">                
+              <use href="./Images/icons.svg#icon-twitter">                
               </use> 
             </svg>
           </a>  
@@ -269,7 +266,7 @@
         <li class="social-item">
           <a class="social-link-f" href="" width="44", height="44">
             <svg class="footer-icon" width="20", height="20">
-              <use href="./images/icons.svg#icon-facebook">                
+              <use href="./Images/icons.svg#icon-facebook">                
               </use> 
             </svg>
           </a>
@@ -277,7 +274,7 @@
         <li class="social-item">
           <a class="social-link-f" href="" width="44", height="44">
             <svg class="footer-icon" width="20", height="20">
-              <use href="./images/icons.svg#icon-linkedin">                
+              <use href="./Images/icons.svg#icon-linkedin">                
               </use> 
             </svg>
           </a>
@@ -295,7 +292,7 @@
       
       <button class="footer-btn" type="submit"><span class="btn-text">Підписатися</span>
         <svg class="icon-subscribe" width="24", height="24">
-          <use href="./images/icons.svg#icon-icon-send"></use></svg>
+          <use href="./Images/icons.svg#icon-icon-send"></use></svg>
           </button>
                   
     </footer>      
