--- a/portfolio.html
+++ b/portfolio.html
@@ -244,45 +244,46 @@
                     </ul>
                 </address>
             </div>
-     <div class="social">
-      <h3 class="social-title">Приєднуйтесь</h3>
+      
+    <div class="social">
+      <p class="social-title">Приєднуйтесь</p>
       <ul class="social-list">
         <li class="social-item">
-          <a class="social-link-f" href="" width="44", height="44">
-            <svg class="footer-icon" width="20", height="20">
+          <a class="social-link-f" href="">
+            <svg class="footer-icon" width="20" height="20">
               <use href="./Images/icons.svg#icon-instagram">                
               </use> 
             </svg>
           </a>
         </li>
         <li class="social-item">
-        <a class="social-link-f" href="" width="44", height="44">
-            <svg class="footer-icon" width="20", height="20">
+        <a class="social-link-f" href="">
+            <svg class="footer-icon" width="20" height="20">
               <use href="./Images/icons.svg#icon-twitter">                
               </use> 
             </svg>
           </a>  
         </li>
         <li class="social-item">
-          <a class="social-link-f" href="" width="44", height="44">
-            <svg class="footer-icon" width="20", height="20">
+          <a class="social-link-f" href="">
+            <svg class="footer-icon" width="20" height="20">
               <use href="./Images/icons.svg#icon-facebook">                
               </use> 
             </svg>
           </a>
         </li>
         <li class="social-item">
-          <a class="social-link-f" href="" width="44", height="44">
-            <svg class="footer-icon" width="20", height="20">
+          <a class="social-link-f" href="">
+            <svg class="footer-icon" width="20" height="20">
               <use href="./Images/icons.svg#icon-linkedin">                
               </use> 
             </svg>
           </a>
         </li>
       </ul>
-      </div>
-    </div> 
+    </div>
 
+    <!-- Форма підписки -->
 
     <div class="flex-container-subscribe">
       <strong class="mailing">Підпишіться на розсилку</strong>
@@ -300,7 +301,7 @@
       </form>
     </div>
     </div>    
-    </footer> 
-    
+    </footer>
+
   </body>
 </html> 
