--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
            <ul class="social-list">
             <li class="social-item">
             <a class="social-link" href="">
-               <svg class="social-icon">
+               <svg class="social-icon" width="20" height="20">
                 <use href="./Images/icons.svg#icon-instagram">
                 </use>
                </svg>
